--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -13,11 +13,20 @@
 .ant-layout-content,
 .main-content-row,
 .main-content-col {
-    min-height: 80vh;
+    min-height: 90vh;
+}
+
+.content-game-list {
+  box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
+}
+
+.content-game-details {
+  padding: 50px;
 }
 
 .ant-layout-header,
 .ant-layout-footer {
+  min-height: 10vh;
   background: #7dbcea;
   color: #fff;
 }
