--- a/client/src/components/ScoreFilterMenu/ScoreFilterMenu.css
+++ b/client/src/components/ScoreFilterMenu/ScoreFilterMenu.css
@@ -1,5 +1,12 @@
 .score-filter-menu {
-    border: 1px solid #000;
     height: 60px;
     width: 100%;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
+    position: sticky;
+    padding: 12px;
+}
+
+.score-filter-menu button {
+    margin-right: 10px;
 }
