Added styling to ScoreCard component; enabled scrolling of game list

--- a/client/src/components/ScoreFilterMenu/ScoreFilterMenu.css
+++ b/client/src/components/ScoreFilterMenu/ScoreFilterMenu.css
@@ -1,10 +1,13 @@
 .score-filter-menu {
-    height: 60px;
+    height: 6vh;
     width: 100%;
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
     position: sticky;
-    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 3%;
 }
 
 .score-filter-menu button {
