--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
   background-color: #fafafa;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
 }
 
 code {
