--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -13,7 +13,7 @@
 .ant-layout-content,
 .main-content-row,
 .main-content-col {
-    height: 90vh;
+    max-height: 90vh;
 }
 
 .content-game-list {
@@ -25,9 +25,14 @@
   padding: 50px;
 }
 
-.ant-layout-header,
-.ant-layout-footer {
-  min-height: 10vh;
-  background: #ff0000;
+.ant-layout-header {
+  background-color: white;
   color: #fff;
+  padding: 0;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
+}
+
+.ant-layout-header .ant-layout {
+  height: 100%;
+  background-color: white;
 }
