--- a/client/src/components/GameList/GameList.css
+++ b/client/src/components/GameList/GameList.css
@@ -1,6 +1,7 @@
 .game-list {
     width: 100%;
-    height: 84vh;
+    /* height: 84vh; */
+    height: 90vh;
     overflow-x: hidden;
     overflow-y: scroll;
 }
