--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -25,6 +25,13 @@
   padding: 50px;
 }
 
+.header-content-row {
+  max-height: 10vh;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
+}
+
+
 .ant-layout-header {
   background-color: white;
   color: #fff;
