--- a/client/src/components/ScoreCard/ScoreCard.css
+++ b/client/src/components/ScoreCard/ScoreCard.css
@@ -12,6 +12,10 @@
     background-color: #f5f5f5;
 }
 
+.score-card.selected {
+    background-color: #f2f4f7;
+}
+
 .team-info {
     font-size: 17px;
     width: 48%;
