--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -19,10 +19,18 @@
 .content-game-list {
   box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
   max-height: none;
+  width: 55%;
+  transition: 0.5s;
+}
+
+.content-game-list.open {
+  width: 100%;
 }
 
 .content-game-details {
+  width: 45%;
   padding: 50px;
+  max-height: none;
 }
 
 .header-content-row {
@@ -30,7 +38,6 @@
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.05) 0 3px 11px 0px;
 }
-
 
 .ant-layout-header {
   background-color: white;
