--- a/client/src/components/GameDetails/GameDetails.css
+++ b/client/src/components/GameDetails/GameDetails.css
@@ -1,6 +1,8 @@
 .game-details {
     width: 100%;
     height: 90vh;
+    padding: 0 20px;
+    background: white;
     overflow-x: hidden;
     overflow-y: scroll;
 }
