--- a/client/src/components/DateNav/DateNav.css
+++ b/client/src/components/DateNav/DateNav.css
@@ -10,7 +10,7 @@
 .date-nav ul {
     list-style: none;
     text-align: left;
-    height: 100%;
+    height: 80%;
     margin: 0;
     padding: 0;
 }
@@ -22,13 +22,14 @@
     color: #989898;
     height: 100%;
     width: 14%;
+    white-space: nowrap;
 }
 
 .date-label {
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
-    margin: 0 15px;
+    margin: 0 5px;
     border-radius: 75px;
     position: relative;
     padding: 10px;
@@ -61,7 +62,7 @@
 
 .anticon-calendar.ant-calendar-picker-icon {
     right: 60%!important;
-    margin-top: 25%!important;
+    margin-top: 15%!important;
     cursor: pointer!important;
     font-size: 16px!important;
 }
