--- a/client/src/components/DateNav/DateNav.css
+++ b/client/src/components/DateNav/DateNav.css
@@ -29,6 +29,7 @@
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
+    font-size: 12.5px;
     margin: 0 5px;
     border-radius: 75px;
     position: relative;
@@ -42,9 +43,6 @@
     background: #00985f;
     color: white;
 }
-
-
-
 
 /* START - OVERWRITING ANTD CLASSES */
 .date-btn {
@@ -76,3 +74,50 @@
     display: none!important;
 }
 /* END - OVERWRITING ANTD CLASSES */
+
+
+/* RESPONSIVE */
+@media (max-width: 820px) {
+    .date-label {
+        margin: 0 20%;
+    }
+
+    .date-nav ul li {
+        width: 33.33%;
+    }
+
+    .date-nav {
+        width: 100%;
+    }
+
+    .date-btn {
+        width: 5%!important;
+        text-align: center;
+    }
+    
+    /* START - OVERWRITING ANTD CLASSES */    
+    .anticon-calendar.ant-calendar-picker-icon {
+        right: 60%!important;
+        margin-top: 15%!important;
+        cursor: pointer!important;
+        font-size: 16px!important;
+    }
+    
+    .anticon-calendar.ant-calendar-picker-icon svg {
+        width: 1.25em!important;
+        height: 1.25em!important;
+    }
+
+    .ant-calendar-picker {
+        position: absolute!important;
+        right: 10px;
+        top: 30%;
+    }
+    /* END - OVERWRITING ANTD CLASSES */
+}
+
+@media (max-width: 480px) {
+    .date-label {
+        margin: 0 5%;
+    }
+}
