--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -67,6 +67,10 @@ button.close-details {
 
 h1.main-title {
   padding: 15px 30px;
+  margin: 0;
+  display: inline-block;
+  width: 50%;
+  white-space: nowrap;
   font-size: 1.75em;
   color: rgba(0, 0, 0, 0.65);
   font-weight: bold;
