--- a/client/src/containers/ScoresView/ScoresView.css
+++ b/client/src/containers/ScoresView/ScoresView.css
@@ -10,7 +10,6 @@
     border-width: 0px 2px;
 }
 
-/* .ant-layout-content, */
 .main-content-row,
 .main-content-col {
     max-height: 80vh;
@@ -74,4 +73,15 @@ h1.main-title {
   font-size: 1.75em;
   color: rgba(0, 0, 0, 0.65);
   font-weight: bold;
+}
+
+/* RESPONSIVE */
+@media (max-width: 820px) {
+  .content-game-details {
+    width: 100%;
+  }
+
+  .content-game-list { 
+    width: 0%;
+  }
 }
