--- a/client/src/components/GameDetails/GameDetails.css
+++ b/client/src/components/GameDetails/GameDetails.css
@@ -1,6 +1,7 @@
 .game-details {
     width: 100%;
     height: 80vh;
+    height: calc(var(--vh, 1vh) * 80);
     padding: 0 20px;
     background: white;
     overflow-x: hidden;
