--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@ body {
   
   background-color: #fafafa;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   position: fixed;
 }
