--- a/client/src/components/GameDetails/DetailsHeader/DetailsHeader.css
+++ b/client/src/components/GameDetails/DetailsHeader/DetailsHeader.css
@@ -1,7 +1,7 @@
 .details-header {
     width: 100%;
     float: left;
-    padding: 25px 0;
+    padding: 0 0 25px 0;
 }
 
 .details-header .team-info {
