--- a/client/src/components/GameDetails/GameDetails.css
+++ b/client/src/components/GameDetails/GameDetails.css
@@ -8,6 +8,20 @@
     overflow-y: scroll;
 }
 
+button.close-details {
+    position: relative;
+    z-index: 10;
+    float: right;
+    top: 10px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    border-radius: 100%;
+    background: url('../../config/resources/btn_close.svg') 7px 6.5px no-repeat #f5f5f5;
+    border: none;
+    padding: 14px;
+  }
+
 .card-header {
     min-height: 32px;
     line-height: 32px;
